# gate-observer

./: .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/: gate-observer.conf  publishers.conf
gate_observer/: client.py  main.py  manager.py  observer.py
gate_observer/gate/: .observer.py.swp  client.py  observer.py
gate_observer/publishers/: chat_bot.py  exceptions.py
gate_observer/tests/: test_client.py  test_manager.py  test_observer.py
gate_observer/tests/publishers/: test_chat_bot.py
