[metadata]
Name = gate-observer
summary = Gate Observer
description-file =
    README.rst
author = AT&T
author-email = someone@att.com
home-page = https://www.att.com/
version = 1.0.0
classifier =
    Environment :: Jenkins
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    gate_observer
data_files =
     etc/gate-observer = etc/*

[entry_points]
console_scripts =
    gate-observer = gate_observer.main:main
